@@ -1,3 +1,4 @@
+* BUG#6632: Correction du crash sur le calcul des périodes manquantes survenant lors de la fermeture du sinistre 
 * BUG#6504 Avertir la validation d'indemnisations dont la somme serait négative si il y a un régularisation par compensation
 * OTH#0000 Correctifs des warnings sur la classe Configuration lors du lancement du serveur
 * BUG#6358 Utiliser la date du jour pour valider l'existence d'un compte bancaire à l'ordonnancement
