@@ -1,3 +1,4 @@
+* BUG#6632: Fix crash in calculating indemnification gaps when closing a claim
 * BUG#6504 Don't invoice when payback method is continuous and invoice has a negative sum
 * OTH#0000 Warning fixes on class Configuration when server starts
 * BUG#6358 Use today to check bank account when scheduling an indemnification
